@@ -3,7 +3,7 @@
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=fontforge
-pkgver=20080720
+pkgver=20080828
 pkgrel=1
 pkgdesc="An outline and bitmap font editor"
 arch=('i686' 'x86_64')
@@ -13,8 +13,8 @@ depends=('libxkbui' 'libxi')
 makedepends=('freetype2')
 options=('!libtool' '!makeflags')
 source=(http://downloads.sourceforge.net/sourceforge/fontforge/fontforge_full-${pkgver}.tar.bz2)
-md5sums=('c8f4678bb79eb125cc2b958757256f10')
-sha1sums=('e964955d5257b5c88887823293d069ce372bf0fa')
+md5sums=('3c232a6e412d8b443b0b881332dbc26c')
+sha1sums=('2aa448e20ed78399786a3e63ccbada1a2f546d59')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
